Delete confirmation dialog

--- a/popup.html
+++ b/popup.html
@@ -22,10 +22,13 @@
           <button id="delete" class="deleteButton"></button> 
         </div>
 
+    </div>
 
-        <button id="manage" class="manageButton floatRight">Manage</button> 
-        <br style="float: none;" />
-        <hr />
+    <div id="manageDiv">
+
+      <button id="manage" class="manageButton floatRight">Manage</button> 
+      <br style="float: none;" />
+      <hr />
 
     </div>
 
