--- a/popup.html
+++ b/popup.html
@@ -41,7 +41,7 @@
     </div>
 
     <div>
-      <a href="https://gist.github.com/JWHorner/4715cec804f84277a26ac3caab053bf4" target="_blank">Guide, FAQ & Terms</a>
+      <a href="https://github.com/JWHorner/KinLog/blob/main/README.md" target="_blank">Guide, FAQ & Terms</a>
       <span class="floatRight">Log an issue: <a href="https://github.com/JWHorner/KinLog/issues" target="_blank">GitHub</a> | <a href="https://discord.gg/GgYpmhtz" target="_blank">Discord</a></span>
     </div>
     
