Timed delete confirmation

--- a/deleteConfirmation.html
+++ b/deleteConfirmation.html
@@ -15,7 +15,7 @@
     <div id="buttons">
 
       <div>
-        <button id="delete" class="deleteButton" disabled>Delete</button>
+        <button id="delete" class="deleteButton confirmDeleteButton" disabled></button>
         <button id="cancel" class="cancelButton">Cancel</button>
       </div>
       
